// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ValidationReport.svelte > should render validation report 1`] = `
<div>
  <rk-status-report>
    <rk-message
      class="pass"
    >
      <icon
        aria-checked="false"
        aria-label="badge-pass"
        data-disabled="false"
        data-size="base"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="badge-pass"
        />
        <!---->
      </icon>
      <!---->
       
      <p>
        This check passed
      </p>
    </rk-message>
    <rk-message
      class="fail"
    >
      <icon
        aria-checked="false"
        aria-label="badge-fail"
        data-disabled="false"
        data-size="base"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="badge-fail"
        />
        <!---->
      </icon>
      <!---->
       
      <p>
        This check failed
      </p>
    </rk-message>
    <rk-message
      class="unknown"
    >
      <icon
        aria-checked="false"
        aria-label="badge-unknown"
        data-disabled="false"
        data-size="base"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="badge-unknown"
        />
        <!---->
      </icon>
      <!---->
       
      <p>
        This check is unknown
      </p>
    </rk-message>
    <rk-message
      class="warn"
    >
      <icon
        aria-checked="false"
        aria-label="badge-warn"
        data-disabled="false"
        data-size="base"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="badge-warn"
        />
        <!---->
      </icon>
      <!---->
       
      <p>
        This check is warning
      </p>
    </rk-message>
    
  </rk-status-report>
  
</div>
`;

exports[`ValidationReport.svelte > should render validation report with custom icons 1`] = `
<div>
  <rk-status-report>
    <rk-message
      class="pass"
    >
      <icon
        aria-checked="false"
        aria-label="pass"
        data-disabled="false"
        data-size="base"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="pass"
        />
        <!---->
      </icon>
      <!---->
       
      <p>
        This check passed
      </p>
    </rk-message>
    <rk-message
      class="fail"
    >
      <icon
        aria-checked="false"
        aria-label="fail"
        data-disabled="false"
        data-size="base"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="fail"
        />
        <!---->
      </icon>
      <!---->
       
      <p>
        This check failed
      </p>
    </rk-message>
    <rk-message
      class="unknown"
    >
      <icon
        aria-checked="false"
        aria-label="unknown"
        data-disabled="false"
        data-size="base"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="unknown"
        />
        <!---->
      </icon>
      <!---->
       
      <p>
        This check is unknown
      </p>
    </rk-message>
    <rk-message
      class="warn"
    >
      <icon
        aria-checked="false"
        aria-label="warn"
        data-disabled="false"
        data-size="base"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="warn"
        />
        <!---->
      </icon>
      <!---->
       
      <p>
        This check is warning
      </p>
    </rk-message>
    
  </rk-status-report>
  
</div>
`;
